Archivos varios modificados y Controladores hechos.